force-app/main/default/objects/Store__c/fields/Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Director_Email__c</fullName>
    <label>Store Manager Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>