force-app/main/default/objects/Store__c/fields/District_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>District_Manager_Email__c</fullName>
    <label>Regional VP Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>