force-app/main/default/objects/Store__c/fields/Keytree_ID__c.field-meta.xml
<CustomField>
    <fullName>Keytree_ID__c</fullName>
    <description>Keytree&apos;s unique identifier for a Store Location.</description>
    <externalId>true</externalId>
    <label>Keytree ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>