force-app/main/default/objects/Store__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <label>Manager Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>