force-app/main/default/objects/Store__c/fields/Store_Email__c.field-meta.xml
<CustomField>
    <fullName>Store_Email__c</fullName>
    <label>Store Email</label>
    <type>Email</type>
</CustomField>