force-app/main/default/objects/Store__c/fields/Store_Hours__c.field-meta.xml
<CustomField>
    <fullName>Store_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>