force-app/main/default/objects/Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Keytree_ID__c</columns>
    <columns>Store_Hours__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>